--- a/water.html
+++ b/water.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pay</title>
+    <title>Water</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -12,16 +12,20 @@
 <body>
     <div class="page">
         <div class="heading">
-           Make an Online Payment to Colonial Heritage Foundation
+          Donate to say <br>"Thanks for Water"
         </div>
         <div class="list">
-            <div><a class="item" 
-                href="water.html">
-                Pay for Water
+            <div><a class="item venmo" 
+                href="https://account.venmo.com/payment-link?note=Water&recipients=spafv&txn=pay">
+                <img src="images/venmo2.png" style="width:100px">
             </a></div>
-            <div class="text">
-                It costs us more than a thousand dollars to provide water and ice at this fesival.  We hope you can pay around 25 to 50 cents per bottle.  If you're particularly thankful that we provide it, feel free to pay more.
-            </div>
+            <div class="text"></div>
+
+            <div><a class="item paypal" 
+                href="https://www.paypal.com/donate/?hosted_button_id=GLDD58SEZGS7Q">
+                <img src="images/paypal.png">
+            </a></div>
+            <div class="text"></div>
 
 
         </div>
