--- a/water.html
+++ b/water.html
@@ -7,16 +7,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    
+    <script src="code.js"></script>
+
 </head>
-<body>
+<body onload="init()">
     <div class="page">
         <div class="heading">
           Donate to say <br>"Thanks for Water"
         </div>
         <div class="list">
             <div><a class="item venmo" 
-                href="https://account.venmo.com/payment-link?note=Water&recipients=spafv&txn=pay">
+                href="https://venmo.com/spafv?txn=pay&note=Donation.+Thanks+for+the+water!">
                 <img src="images/venmo2.png" style="width:100px">
             </a></div>
             <div class="text"></div>
