--- a/water.html
+++ b/water.html
@@ -17,7 +17,7 @@
         </div>
         <div class="list">
             <div><a class="item venmo" 
-                href="https://venmo.com/spafv?txn=pay&note=Donation.+Thanks+for+the+water!">
+                href="venmo://paycharge?txn=pay&recipients=spafv&note=bakehouse">
                 <img src="images/venmo2.png" style="width:100px">
             </a></div>
             <div class="text"></div>
