--- a/index.html
+++ b/index.html
@@ -14,13 +14,50 @@
         <div class="heading">
            Make an Online Payment to Colonial Heritage Foundation
         </div>
+            <div class="intro">
+            During the payment process, you may notice that you are paying a company called the Society for the Preservation of America's Founding Values.  This is another name for the Colonial Heritage Foundation.
+
+            </div>
+
         <div class="list">
             <div><a class="item" 
                 href="water.html">
                 Pay for Water
             </a></div>
             <div class="text">
-                It costs us more than a thousand dollars to provide water and ice at this fesival.  We hope you can pay around 25 to 50 cents per bottle.  If you're particularly thankful that we provide it, feel free to pay more.
+                It costs us more than $3,000.00 to provide water and ice at this festival.  We hope you can pay around 25 to 50 cents per bottle.  If you're particularly thankful that we provide it, feel free to pay more.
+            </div>
+
+            <div><a class="item" 
+                href="bakehouse.html">
+                Bakehouse Purchase
+            </a></div>
+            <div class="text">
+                This is where you can get lots of tasty treats, many of which are made from actual recipes from colonial times.  It's <a href="https://schedule.colonialheritage.org/?pin=58">number 58</a> on the map.
+            </div>
+
+            <div><a class="item" 
+                href="giftshop.html">
+                Gift Shop Purchase
+            </a></div>
+            <div class="text">
+            This is where you can get fun items, many of which were in use during the colnial time.  It's <a href="https://schedule.colonialheritage.org/?pin=1">number 1</a> on the map.
+            </div>
+
+            <div><a class="item" 
+                href="fiber.html">
+               Fiber Arts Purchase
+            </a></div>
+            <div class="text">
+            This is where you can get purchase yarn, drop spindles, and tapestry looms.  It's <a href="https://schedule.colonialheritage.org/?pin=50">number 40</a> on the map.
+            </div>
+
+            <div><a class="item" 
+                href="donate.html">
+                General Donation
+            </a></div>
+            <div class="text">
+            If you have really enjoyed this event, please consider making a financial contribution.  With your help, we'll be able to keep this a free event.
             </div>
 
 
