--- a/donate.html
+++ b/donate.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Water</title>
+    <title>General Donation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -13,21 +13,21 @@
 <body onload="init()">
     <div class="page">
         <div class="heading">
-          Donate to say <br>"Thanks for Water"
+          General Donation
         </div>
             <div class="intro">
-                It costs us more than three thousand dollars to provide water and ice at this festival.  We hope you can pay around 25 to 50 cents per bottle.  <br><br>If you're particularly thankful for it, feel free to pay more.
+                The Colonial Heritage Foundation is run entirely by volunteers.  No one takes a salary or is paid a wage.  Every penny you give goes to supporing our in-school program and public events such as this one.
 
             </div>
         <div class="list">
             <div><a class="item venmo" 
-                href="venmo://paycharge?txn=pay&recipients=spafv&note=Thanks+for+the+water">
+                href="venmo://paycharge?txn=pay&recipients=spafv&note=General+Donation">
                 <img src="images/venmo2.png" style="width:100px">
             </a></div>
             <div class="text">This button assumes you already have the Venmo app installed on your phone.</div>
 
             <div><a class="item paypal" 
-                href="https://www.paypal.com/donate/?hosted_button_id=GLDD58SEZGS7Q">
+                href="https://www.paypal.com/donate/?hosted_button_id=5YE3GJBD76GPQ">
                 <img src="images/paypal.png">
             </a></div>
             <div class="text">This button will let you pay with a <strong>credit card</strong> even if you don't have a paypal account</div>
