--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Gift Shop Purchase
             </a></div>
             <div class="text">
-            This is where you can get fun items, many of which were in use during the colnial time.  It's <a href="https://schedule.colonialheritage.org/?pin=1">number 1</a> on the map.
+            This is where you can get fun items to help you remember your timer here today, many of which were in use during the colonial time.  It's <a href="https://schedule.colonialheritage.org/?pin=1">number 1</a> on the map.
             </div>
 
             <div><a class="item" 
@@ -49,7 +49,15 @@
                Fiber Arts Purchase
             </a></div>
             <div class="text">
-            This is where you can get purchase yarn, drop spindles, and tapestry looms.  It's <a href="https://schedule.colonialheritage.org/?pin=50">number 40</a> on the map.
+            This is where you can purchase yarn, drop spindles, and tapestry looms.  It's <a href="https://schedule.colonialheritage.org/?pin=40">number 40</a> on the map.
+            </div>
+
+            <div><a class="item" 
+                href="print.html">
+               Historic Documents Purchase
+            </a></div>
+            <div class="text">
+            Choose from dozens of reprints--all printed on our historic press.  It's <a href="https://schedule.colonialheritage.org/?pin=23">number 23</a> on the map.
             </div>
 
             <div><a class="item" 
