--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
                 It costs us more than $3,000.00 to provide water and ice at this festival.  We hope you can pay around 25 to 50 cents per bottle.  If you're particularly thankful that we provide it, feel free to pay more.
             </div>
 
+        <div class="list">
+            <div><a class="item" 
+                href="taste.html">
+                Cup and Quill Donation.
+            </a></div>
+            <div class="text">
+                Step back in time and taste the flavors of the 18th century while discuss the issue of the day with important figures from the nation's founding at <a href="https://schedule.colonialheritage.org/?pin=9">number 9</a> on the map.
+            </div>
+
             <div><a class="item" 
                 href="bakehouse.html">
                 Bakehouse Purchase
