--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 Pay for Water
             </a></div>
             <div class="text">
-                It costs us more than $3,000.00 to provide water and ice at this festival.  We hope you can pay around 25 to 50 cents per bottle.  If you're particularly thankful that we provide it, feel free to pay more.
+                It costs us more than $4,000.00 to provide water and ice at this festival.  We hope you can pay around 25 to 50 cents per bottle.  If you're particularly thankful that we provide it, feel free to pay more.
             </div>
 
         <div class="list">
@@ -34,7 +34,7 @@
                 Cup and Quill Donation.
             </a></div>
             <div class="text">
-                Step back in time and taste the flavors of the 18th century while discuss the issue of the day with important figures from the nation's founding at <a href="https://schedule.colonialheritage.org/?pin=9">number 9</a> on the map.
+                Step back in time and taste the flavors of the 18th century while discussing the issues of the day with important figures from the nation's founding at <a href="https://schedule.colonialheritage.org/?pin=9">number 9</a> on the map.
             </div>
 
             <div><a class="item" 
@@ -50,7 +50,7 @@
                 Gift Shop Purchase
             </a></div>
             <div class="text">
-            This is where you can get fun items to help you remember your timer here today, many of which were in use during the colonial time.  It's <a href="https://schedule.colonialheritage.org/?pin=1">number 1</a> on the map.
+            This is where you can get fun items to help you remember your time here today, many of which were in use during the colonial time.  It's <a href="https://schedule.colonialheritage.org/?pin=1">number 1</a> on the map.
             </div>
 
             <div><a class="item" 
