--- a/bakehouse.html
+++ b/bakehouse.html
@@ -16,7 +16,7 @@
           Purchase Items at the Bakehouse
         </div>
             <div class="intro">
-                It costs us more than a thousand dollars to provide water and ice at this festival.  We hope you can pay around 25 to 50 cents per bottle.  <br><br>If you're particularly thankful for it, feel free to pay more.
+                Watch experienced artisans bake bread in a wood-fired brick oven just the way it was made in the 18th century.  While you do, purchase a slice with butter and honey.
 
             </div>
         <div class="list">
