--- a/donate.html
+++ b/donate.html
@@ -16,7 +16,7 @@
           General Donation
         </div>
             <div class="intro">
-                The Colonial Heritage Foundation is run entirely by volunteers.  No one takes a salary or is paid a wage.  Every penny you give goes to supporing our in-school program and public events such as this one.
+                The Colonial Heritage Foundation is run entirely by volunteers.  No one takes a salary or is paid a wage.  Every penny you give goes to supporting our in-school programs and public events such as this one.
 
             </div>
         <div class="list">
