--- a/print.html
+++ b/print.html
@@ -16,7 +16,7 @@
           Historic Documents
         </div>
             <div class="intro">
-                Interested in the secret first draft of the US Constitution?  How about the famous image of the Boston Massacre?  Each item has holds a significant place in the American Founding. Feel free to <a href="https://recdocs.blogspot.com">preview the documents</a>.
+                Interested in the secret first draft of the US Constitution?  How about the famous image of the Boston Massacre?  Each item holds a significant place in the American Founding. Feel free to <a href="https://revdocs.blogspot.com">preview the documents</a>.
 
             </div>
         <div class="list">
