--- a/taste.html
+++ b/taste.html
@@ -16,7 +16,7 @@
           Tasting Events at the Cup and Quill
         </div>
             <div class="intro">
-            Enjoy a taste of the 18th century while you discuss the issues of the day.  Important figures from our nation's founding.
+            Enjoy a taste of the 18th century while you discuss the issues of the day with  important figures from our nation's founding.
 
             </div>
         <div class="list">
