--- a/water.html
+++ b/water.html
@@ -16,7 +16,7 @@
           Donate to say <br>"Thanks for Water"
         </div>
             <div class="intro">
-                It costs us more than three thousand dollars to provide water and ice at this festival.  We hope you can pay around 25 to 50 cents per bottle.  <br><br>If you're particularly thankful for it, feel free to pay more.
+                It costs us more than $4,000.00 to provide water and ice at this festival.  We hope you can pay around 25 to 50 cents per bottle.  <br><br>If you're particularly thankful for it, feel free to pay more.
 
             </div>
         <div class="list">
