--- a/qr.html
+++ b/qr.html
@@ -11,7 +11,7 @@
     <script src="code.js"></script>
 
 </head>
-<body onload="showQR()" >
+<body onload="showQR()" style="background-color: white;" >
     <div class="page">
         <div id="heading" class="heading"></div>
         <div id="qr-container">
