--- a/qr.html
+++ b/qr.html
@@ -13,7 +13,7 @@
 </head>
 <body onload="showQR()" style="background-color: white;" >
     <div class="page">
-        <div id="heading" class="heading"></div>
+        <div id="heading" class="heading" style="color:black"></div>
         <div id="qr-container">
         <div id="qrcode"></div>
         <div id="url"></div>
